--- a/mobile/app/src/main/AndroidManifest.xml
+++ b/mobile/app/src/main/AndroidManifest.xml
@@ -16,10 +16,11 @@
         <activity android:name=".profile.ProfileActivity" android:theme="@style/AppTheme.OverlapSystemBar"/>
         <activity android:name=".security.SecurityActivity" android:theme="@style/AppTheme.OverlapSystemBar"/>
         <activity android:name=".category.CategoryActivity" android:theme="@style/AppTheme.OverlapSystemBar"/>
-        <activity android:name=".searchcategory.SearchCategoryActivity" android:theme="@style/AppTheme.OverlapSystemBar"/>
         <activity android:name=".searchitem.SearchItemActivity" android:theme="@style/AppTheme.OverlapSystemBar"/>
         <activity android:name=".itemdetail.ItemDetailActivity" android:theme="@style/AppTheme.OverlapSystemBar"/>
         <activity android:name=".notification.NotificationActivity" android:theme="@style/AppTheme.OverlapSystemBar"/>
+        <activity android:name=".edititemcart.EditItemCartActivity" android:theme="@style/AppTheme.OverlapSystemBar"/>
+        <activity android:name=".searchcategory.SearchCategoryActivity" android:theme="@style/AppTheme.OverlapSystemBar"/>
         <activity android:name=".splashscreen.SplashScreenActivity" android:theme="@style/AppTheme.OverlapSystemBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
